# nurbs_benchmark

./: CMakeLists.txt  LICENSE  README.md  nurbs_benchmark.cpp  testgrid.bat
data/: MAT.step  hammer.step  sphere_nurbs.step
src/: nurbs_benchmark.cpp
